--- a/src/pages/feed/components/feed-collection.hbs
+++ b/src/pages/feed/components/feed-collection.hbs
@@ -9,7 +9,12 @@
         <div class="feed-collection__container-card"
             title="{{this.name}}">
             <div>
-                <img src="{{this.previewPath}}" alt="{{this.previewPath}}">
+                <!--<img src="{{this.previewPath}}" alt="{{this.previewPath}}">-->
+
+                <video autoplay muted poster="{{this.previewPath}}">
+                    <source src="{{this.previewVideoPath}}"
+                        type='video/mp4'>
+                </video>
 
                 <a href="/movies/{{this.id}}"
                     style="margin-left: 1rem;"
